--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Pourover Coffee Ratio Calculator</h1>
-	<p>Choose your desired coffee strength and the amount of coffee you want to make (in grams) to calculate the coffee-to-water ratio:</p>
+	<p>Choose your desired coffee strength and the amount of ground coffee you will be using (in grams) to calculate the coffee-to-water ratio:</p>
 	<form>
 		<label for="coffee-strength">Desired coffee strength:</label>
 		<select id="coffee-strength" name="coffee-strength" required>
